# ATACofthesnake

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  CHANGELOG.md  ChangeLog  CondaEnv.yaml  LICENSE  README.md  env.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.ci/: test.sh
.github/: dependabot.yml
.github/workflows/: conda_envs.yml  docs.yml  dryrun.yml  flake.yml  pixi.yml  pypi.yml  release-please.yml  ruff.yml  test.yml  ty.yml
.github/workflows/test_data/: motifs_fin.meme
ATACofthesnake/: Snakefile  Tobias.Snakefile  bamProcess.smk  diffAcc.Snakefile  diffAcc.smk  diffAnalysis.Snakefile  diffDown.smk  diffDownstream.Snakefile  diffDownstream.smk  misc.py  peaks.smk  template.tex
ATACofthesnake/Rscripts/: DESeq2.R  EdgeR.R  edgeR_scalefactors.R
ATACofthesnake/envs/: AOS_AnnMotif.yaml  AOS_Idr.yaml  AOS_Meme.yaml  AOS_SeqTools.yaml  AOS_Tectonic.yaml  AOS_Uropa.yaml  AOS_diffR.yaml  AOS_meme.yaml  AOS_samtools.yaml  AOS_uropa.yaml  uropa.yaml
docs/: conf.py  index.rst
docs/content/: example.rst  installation.rst  usage.rst
src/AOS/: AOS.py  AOS.smk  atac.py  helper.py  preflight.py  workflow.smk
src/AOS.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  top_level.txt
src/AOS/envs/: deeptools.yml  meme.yml  seqtools.yml  tobias.yml
src/AOS/rscripts/: edger.R  scalefactors.R
src/AOS/rules/: DE.smk  motifs.smk  peaks.smk  qc.smk
src/AOS/tests/: test_preflight.py
src/ATACofthesnake/: diffDown.smk
src/ATACofthesnake/Rscripts/: edgeR_scalefactors.R
src/aos/: atac.py  example.py  gp_custom_kernels.py  gp_fit.py  gp_fitter.py  gp_ordinal.py  gp_utils.py  helper.py  logger.py  preflight.py  workflow.smk
src/aos/rscripts/: scalefactors.R
src/aos/rules/: 1_peaks.smk  1_qc.smk  2_gp_de.smk  2_lrt_de.smk  2_twogroup_de.smk  3_collate_sigresults.smk  3_motifs.smk  3_tobias.smk  DE.smk  gp_de.smk  lrt_de.smk  motifs.smk  peaks.smk  qc.smk  twogroup_de.smk
src/aos/rules/envs/: deeptools.yml  gimmemotifs.yml  gp.yml  meme.yml  seqtools.yml
src/aos/rules/scripts/: GP.py  edger.R  edger_lrt.R  edger_twogroup.R  gp.py  gp_interaction.py  gp_postprocess.py  parse_fimo.py  plot_ame.py  scalefactors.R
src/aos/tests/: conftest.py  test_preflight.py
