[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ATACofthesnake"
dynamic = ["version"]
description = "ATACofthesnake"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "WardDeb", email = "w@rddeboutte.com" }
]
keywords = ["ATAC", "differential accessibility", "motifs", "time-course analysis"]
urls = { Homepage = "https://www.github.com/maxplanck-ie/ATACofthesnake" }
requires-python = ">=3.12"
dependencies = [
  "seaborn >= 0.12.0",
  "pandas >= 2",
  "rich >= 12.6.0",
  "snakemake >= 9.0.0",
  "click >= 8.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pip",
    "build",
    "twine",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-click",
]

[project.scripts]
ATAC = "aos.atac:main"
ATAC_example = "aos.example:download_example"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.smk", "*.yml", "*.R"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]
[tool.pixi.pypi-dependencies]
ATACofthesnake = { path = ".", editable = true, extras = ["dev", "docs"] } 

[tool.pixi.tasks]
ty = "ty check"
ruff = "ruff check ."
test = "pytest"
doc = "sphinx-build -b html docs/ docs/_build/html"
