[metadata]
name = ATACofthesnake
description = ATACofthesnake
long_description = ATAC-seq processing after alignment.
keywords = ATAC, differential accessibility, motifs
license = MIT
url = https://www.github.com/maxplanck-ie/ATACofthesnake
author = WardDeb
author_email = deboutte@ie-freiburg.mpg.de

[options]
package_dir =
  = src
python_requires = >=3.7

[options.package_data]
* = *smk, *yml

[options.entry_points]
console_scripts = 
  ATAC = AOS.atac:main